# fuel-meter

./: Cargo.toml  Dockerfile  Dockerfile.dev  README.md  compose.prod.yml  compose.yml
.github/workflows/: build-image.yml  release.yml
src/: main.rs
src/web/: mod.rs
src/web/dto/: car_claims.rs  mod.rs
src/web/errors/: mod.rs
src/web/extractors/: token.rs  validate_body.rs
src/web/middlewares/: auth.rs
src/web/routes/: mod.rs  test.rs
src/web/routes/main/: root.rs
